--- a/blogg/templates/home.html
+++ b/blogg/templates/home.html
@@ -1,4 +1,9 @@
 <h1>All Blog Posts</h1>
+<form action="{% url 'logout' %}" method="post">
+  {% csrf_token %}
+  <button type="submit">Logout</button>
+</form>
+
 
 {% for post in posts %}
   <div>
@@ -7,8 +12,24 @@
     </h2>
     <p>{{ post.content|truncatewords:30 }}</p>
     <small>by {{ post.author }} on {{ post.created_at }}</small>
+    {% if user.is_authenticated %}
+        <p><a href="{% url 'create_post' %}">+ Create New Post</a></p>
+        <p><a href="{% url 'update_post' post.id %}">Edit</a></p>
+        <form action="{% url 'delete_post' post.id %}" method="POST" onsubmit="return confirmDelete();">
+          {% csrf_token %}
+          <button type="submit">Delete</button>
+      </form>      
+    {% else %}
+        <p><a href="{% url 'login' %}">Login to create a post</a></p>
+    {% endif %}
   </div>
   <hr>
 {% empty %}
   <p>No posts yet.</p>
 {% endfor %}
+<script>
+  function confirmDelete() {
+      return confirm("Are you sure you want to delete this post?");
+  }
+  </script>
+  
