--- a/blogg/templates/registration/login.html
+++ b/blogg/templates/registration/login.html
@@ -1,7 +1,23 @@
-<h2>Log In</h2>
-<form  method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Log In</button>
-</form>
-<p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+{% extends 'base.html' %}
+{% block content %}
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <h2 class="mb-4">LogIn</h2>
+        <form method="POST">
+            {% csrf_token %}
+            {% for field in form %}
+                <div class="mb-3">
+                    {{ field.label_tag }}
+                    {{ field }}
+                    {% if field.errors %}
+                        <div class="text-danger">{{ field.errors }}</div>
+                    {% endif %}
+                </div>
+            {% endfor %}
+            <button type="submit" class="btn btn-primary">LOgIn</button>
+        </form>
+    </div>
+    <p class="text-center">Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+</div>
+{% endblock %}
+
